--- a/sections/cart-recommend.liquid
+++ b/sections/cart-recommend.liquid
@@ -1,6 +1,18 @@
 {% assign url = canonical_url | url_decode | split: '?' %}
 {% assign url = url[1] | split: '=' %}
 {%- if url != blank -%}
+    {% liquid
+        assign new_badge = settings.new_badge
+        assign show_vendor = settings.show_vendor
+        assign show_rating = settings.show_rating
+        assign add_btn = settings.enable_add_btn
+        assign btn = settings.btn
+        assign variant_type = settings.variant
+        assign prod_img_size = settings.prod_img_size
+        assign secondary_image = settings.show_secondary_image
+        assign notify_me = settings.notify_me
+        assign price_variant = settings.price_variant
+    %}
     <div class="cart-recommend__block js-cart-recommend-block">
         <h3>{{ 'sections.cart.recommend' | t }}</h3>
         <div class="js-recommend-swiper swiper-container">
@@ -9,7 +21,22 @@
                     {% if item != 'id' %}
                         {%- assign product = all_products[item] -%}
                         <li class="cart-recommend__item js-cart-recommend-item swiper-slide">
-                            {% render 'card-product', product: product %}
+                            {% render 'card-product',
+                                product: product,
+                                show_vendor: show_vendor,
+                                show_rating: show_rating,
+                                new_badge: new_badge,
+                                show_quantity: false,
+                                use_variant: price_variant,
+                                variant_type: variant_type,
+                                add_btn: add_btn,
+                                btn: btn,
+                                img_size: prod_img_size,
+                                secondary_image: secondary_image,
+                                notify_me: notify_me,
+                                image_custom: false,
+                                fill: false
+                            %}
                         </li>
                     {% endif %}
                 {%- endfor -%}
