--- a/snippets/form-collection.liquid
+++ b/snippets/form-collection.liquid
@@ -1,6 +1,5 @@
-{% capture "form_id" %}product_form-{{ section.id }}-{{ product.id }}{%- endcapture %}
 {% if product.available %}
-    {% form 'product', product, id: form_id, class: 'card-product__form' %}
+    {% form 'product', product, class: 'card-product__form' %}
         {% if product.available and product.variants.size > 1 %}
             <variant-pills
                 class="swatch-wrap"
