--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -9,7 +9,7 @@
 >
     <div class="main-product__media-row">
         <div class="container">
-            <div class="main-product__wrapper main-product-media--left js-card-product-wrapper">
+            <div class="main-product__wrapper main-product-media--left main-product-media--no-fill js-card-product-wrapper">
                 <div class="main-product__media-wrapper">
                     {% render 'product-media-card', product: product %}
                 </div>
