--- a/snippets/form-collection.liquid
+++ b/snippets/form-collection.liquid
@@ -126,7 +126,7 @@
                 <div>
                     <quantity-input class="quantity">
                         <button class="quantity__button quantity__button--minus" name="minus" type="button">
-                            {% render 'icon-minus' %}
+                            {% render 'icons-svg', icons: 'minus' %}
                         </button>
 
                         <input
@@ -144,7 +144,7 @@
                         >
 
                         <button class="quantity__button quantity__button--plus" name="plus" type="button">
-                            {% render 'icon-plus' %}
+                            {% render 'icons-svg', icons: 'plus' %}
                         </button>
                     </quantity-input>
                 </div>
