--- a/scss/components/component-rating.scss
+++ b/scss/components/component-rating.scss
@@ -4,9 +4,9 @@
   margin: 1rem 0 0 0;
 }
 
-.product .rating-star {
-  --letter-spacing: 0.4;
-  --font-size: 1.7;
+.main-product .rating-star {
+  --letter-spacing: 0.2;
+  --font-size: 2.2;
 }
 
 .card-product__content .rating-star,
@@ -48,6 +48,8 @@
 .rating-count {
   display: inline-block;
   margin: 0;
+  position: relative;
+  top: -1px;
 }
 
 @media (forced-colors: active) {
