--- a/snippets/card-rating.liquid
+++ b/snippets/card-rating.liquid
@@ -1,10 +1,18 @@
 {% liquid
     assign rating_decimal = 0
     assign decimal = product.metafields.reviews.rating.value.rating | modulo: 1
+
     if decimal >= 0.3 and decimal <= 0.7
         assign rating_decimal = 0.5
     elsif decimal > 0.7
         assign rating_decimal = 1
+    endif
+    if product.metafields.reviews.rating.value != blank
+        assign rating_count = product.metafields.reviews.rating_count
+        assign rating-max = product.metafields.reviews.rating.value.scale_max
+    else
+        assign rating-max = 5.0
+        assign rating_count = 0
     endif
 %}
 <div
@@ -15,17 +23,17 @@
     <span
         aria-hidden="true"
         class="rating-star color-icon-{{ settings.accent_icons }}"
-        style="--rating: {{ product.metafields.reviews.rating.value.rating | floor }}; --rating-max: {{ product.metafields.reviews.rating.value.scale_max }}; --rating-decimal: {{ rating_decimal }};"
+        style="--rating: {{ product.metafields.reviews.rating.value.rating | floor }}; --rating-max: {{ rating-max }}; --rating-decimal: {{ rating_decimal }};"
     ></span>
 </div>
-<p class="rating-text caption">
+<p class="rating-text">
     <span aria-hidden="true">
         {{- product.metafields.reviews.rating.value }} /
         {{ product.metafields.reviews.rating.value.scale_max -}}
     </span>
 </p>
-<p class="rating-count caption">
-    <span aria-hidden="true">({{ product.metafields.reviews.rating_count }})</span>
+<p class="rating-count">
+    <span aria-hidden="true">({{ rating_count }})</span>
     <span class="visually-hidden">
         {{- product.metafields.reviews.rating_count }}
         {{ 'accessibility.total_reviews' | t -}}
