--- a/snippets/product-info-card.liquid
+++ b/snippets/product-info-card.liquid
@@ -8,9 +8,103 @@
 
     assign price_variant = settings.price_variant
     assign date_timer = product.metafields.custom.countdown_timer
+
+    assign sold_out = true
+    if product.available
+        assign sold_out = false
+    endif
+
+    assign current_variant = product.selected_or_first_available_variant
+    if current_variant.featured_image != blank
+        assign image_box = current_variant.featured_image
+    else
+        assign image_box = product.featured_image
+    endif
 %}
 
-<div class="card-product__content">
+<div class="main-product__content">
+    <div class="main-product__info">
+        <div class="main-product__info-left">
+            <h1 class="main-product__title js-card-product-title" itemprop="name">
+                {{ product.title | escape }}
+            </h1>
+            {% render 'card-rating', product: product %}
+
+            <div class="main-product__details">
+                {%- for var in product.variants -%}
+                    {%- assign varQ = var.inventory_quantity -%}
+                {%- endfor -%}
+
+                <div class="main-product__stock">
+                <span class="main-product__stock-icon main-product__stock--{% if sold_out %}nostock {% elsif varQ < 10 and sold_out == false %}lowstock{% else %}normalstock{% endif %} js-card-product-stock"> </span>
+                <span class="main-product__stock-title">{{ 'products.product.stock_level' | t }}:</span>
+                <span class="js-card-product-count">{{ varQ }}</span> {{ 'products.product.stock_items' | t }}</span>
+            </div>
+
+                <div class="single_product__sku">
+                    <b>{{ 'products.product.sku' | t }}:</b>
+                    {% assign current_variant = product.selected_or_first_available_variant %}
+                    <span class="variant-sku">{{ current_variant.sku }}</span>
+                </div>
+
+                <div class="single_product__barcode">
+                    <b>{{ 'products.product.barcode' | t }}:</b>
+                    <span class="variant-barcode">{{ current_variant.barcode }}</span>
+                </div>
+            </div>
+        </div>
+        <div class="main-product__info-right">
+            <div class="main-product__box-indent">
+                <div class="main-product__text">
+                    <div class="main-product__text-item">
+                        {% render 'icons-svg', icons: 'car' %}
+                        <div class="main-product__text-title">
+                            <span class="h5">FREE SHIPPING</span>
+                            Free shipping on all US order or order above $99
+                        </div>
+                    </div>
+                    <div class="main-product__text-item">
+                        {% render 'icons-svg', icons: 'phone' %}
+                        <div class="main-product__text-title">
+                            <span class="h5">SUPPORT 24/7</span>
+                            Contact us 24 hours a day, 7 days a week
+                        </div>
+                    </div>
+
+                    <div class="main-product__text-item">
+                        {% render 'icons-svg', icons: 'undo' %}
+                        <div class="main-product__text-title">
+                            <span class="h5">14 DAYS RETURN</span>
+                            Simply return it within 14 days for an exchange.
+                        </div>
+                    </div>
+                </div>
+                <!-- /snippets/compare-wishlist-btns.liquid -->
+                <!-- /snippets/social-sharing.liquid -->
+                <div
+                    class="main-product__social-sharing"
+                    {{ block.shopify_attributes }}
+                >
+                    {% assign share_url = request.origin | append: product.url %}
+                    <ul class="list-social">
+                        <li>{{ 'blogs.article.share' | t }}:</li>
+                        {% render 'social-sharing',
+                            share_title: product.title,
+                            share_permalink: product.url,
+                            share_image: image_box
+                        %}
+                    </ul>
+                </div>
+                <div class="main-product__pay-pal">
+                    <img
+                        src="//cdn.shopify.com/s/files/1/2318/9533/files/pay-pal_03_300x_crop_top.png?v=1613735657"
+                        alt="payment"
+                    >
+                </div>
+            </div>
+        </div>
+    </div>
+
     {% if date_timer %}
         <div class="card-product__badge card-product__badge--offer">
             {{ 'products.product.offer' | t }}
@@ -62,7 +156,7 @@
     {% render 'price',
         product: product,
         price_class: 'card-product__price js-card-product-price',
-        use_variant: use_variant
+        use_variant: price_variant
     %}
 
     {% if add_btn %}
